gccida/g0/general_operand
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/general_operand/src/recog.c:1379:31: error: must use 'enum' tag to refer to type 'machine_mode'
int  general_operand( rtx op, machine_mode mode) 
                              ^
                              enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/general_operand/src/recog.c:1382:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // [rsp+0h] [rbp-30h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/general_operand/src/recog.c:1383:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+4h] [rbp-2Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/general_operand/src/recog.c:1387:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+2Ch] [rbp-4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/general_operand/src/recog.c:1394:40: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( !*( ( _BYTE *)op + 2) && modea && mode_class_0[modea] != MODE_INT && mode_class_0[modea] != MODE_PARTIAL_INT ) 
                                       ^~~~~~~~~~~~
                                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/general_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/general_operand/src/recog.c:1394:75: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( !*( ( _BYTE *)op + 2) && modea && mode_class_0[modea] != MODE_INT && mode_class_0[modea] != MODE_PARTIAL_INT ) 
                                                                          ^~~~~~~~~~~~
                                                                          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/general_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/general_operand/src/recog.c:1421:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int8 *)op + 2)] == MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/general_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/general_operand/src/obj/recog.o] Error 1
